# pyhello

./: LICENSE  Makefile  README.md  setup.cfg  setup.py
src/pyhello/: __init__.py  __main__.py  pyhello.py
tests/: test_simple.py
