[metadata]
name = pyhello
version = 0.0.0
description = python hello world package
url = https://github.com/mn3m0nic/pyhello
author = Nick V
author_email = mn3m0nic@users.noreply.github.com
maintainer = Nick V
maintainer_email = mn3m0nic@users.noreply.github.com
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
